Fix left-right align issue.

--- a/content/stylesheet.scss
+++ b/content/stylesheet.scss
@@ -6,6 +6,10 @@ html, body {
   padding: 0;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 @mixin horiz-list {
     &:after{
 	content: "-";
